# CodeKata_CppGoogletest

./: .gitignore  CMakeLists.txt
ext/: CMakeLists.txt
tests/: implementation_test.cpp
